Added full support for dynamic module loading. TODO: Make changes to MainFrame, currently it's bloated.